test/Dialect/POD/pod_read_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

function.def @read_pod(%pod: !pod.type<[@n: index]>) ->  index {
  // expected-error@+1 {{record 'y' was not found in plain-old-data type}}
  %r = pod.read %pod[@y] : !pod.type<[@n: index]>, index
  function.return %r: index
}

// -----

function.def @read_pod(%pod: !pod.type<[@n: index]>) ->  !felt.type {
  // expected-error@+1 {{operation result type and type of record do not match ('!felt.type' != 'index')}}
  %r = pod.read %pod[@n] : !pod.type<[@n: index]>, !felt.type
  function.return %r: !felt.type 
}

// -----

function.def @read_pod(%pod: !felt.type) ->  !felt.type {
  // expected-error@+1 {{custom op 'pod.read' invalid kind of Type specified}}
  %r = pod.read %pod[@n] : !felt.type, !felt.type
  function.return %r: !felt.type 
}
